# src/routes/admin.ts
@@ -1,0 +1,10 @@
+import { Router } from "express";
+import { register, login, logout } from "../controllers/admin";
+
+const router = Router();
+
+router.post("/register", register);
+router.post("/login", login);
+router.post("/logout", logout);
+
+export default router;
